--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+
 </head>
 <body>
 
@@ -27,17 +29,45 @@
         <p> 3+3= <input type="text"></p>
         <p> 10 /3= <input type="text"></p>
         <p> 5*2= <input type="text"></p>
+        <p>Essa tarefa foi dificil <input type="range"></p>
     </fieldset>
     
     <fieldset>
+        <img src="logo.png" alt="">
         <legend>Opinião quando a utilização</legend>
         <img src="" alt="">
         <p>Na frase: "Eu sou bonito" o sujeito é</p>
-        Brad pitt <input type="radio">
-        João da padaria<input type="radio">
-        Você mesmo <input type="radio">
-        Meus pais <input type="radio">
-        Eu <input type="radio"></p>
+        Brad pitt <input type="radio"> <br>
+        João da padaria<input type="radio"> <br>
+        Você mesmo <input type="radio"> <br>
+        Meus pais <input type="radio"> <br>
+        Eu <input type="radio"></p> <br>
+
+        <p>Complete a frase:"Filho de peixe, peixinho__"</p>
+        <p><input type="checkbox">É <br>
+        <input type="checkbox">Tem <br>
+        <input type="checkbox">Verde <br>
+        <input type="checkbox">Bonito <br>
+        <input type="checkbox">Maria
+        </p>
     </fieldset>
+
+    <fieldset>
+        <legend>De uma nota para sua professora:</legend>
+        <p>Sua professora explica bem a matéria ?</p>
+        <input type="range">
+    </fieldset>
+
+    <fieldset>
+        <legend>Opniões:</legend>
+        <p>Digite sua opnião sobre a disciplina:</p>
+        <textarea id="story" name="story"
+          rows="8" cols="150"> 
+        </textarea>
+    </fieldset>
+    <br>
+    <button type="submit">Gravar respostas
+        
+    </button>
 </body>
 </html>
